fix(azure-pipeline): change branch for release
configuration for release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-    "branch": "next",
+    "branch": "master",
     "plugins": [
         ["semantic-release-ado", {
           "varName": "version",
