--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,8 @@ steps:
     -p @semantic-release/git
     -p semantic-release-ado
     semantic-release
-  env: { GH_TOKEN: $(GitHubToken) }
+  env: 
+    GH_TOKEN: $(GitHubToken)
   displayName: 'Semantic Release'
 
 - script: echo $(version)
