--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/romulo2franca/ocktops.git"
+    "url": "https://romulo2franca@github.com/romulo2franca/ocktops.git"
   },
   "scripts": {
     "start": "react-scripts start",
