Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     versionSpec: $(node_version)
 
   env: 
-    GITHUB_TOKEN: $(GitHubToken)
+    GITHUB_TOKEN: $(GH_TOKEN)
     FOO: $(foo)
 
 - script: > 
