--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,9 @@ steps:
   inputs:
     versionSpec: $(node_version)
 
-  
-- script: echo "$env:GIT_VAR"
-  env: 
-    GIT_VAR: $(GH_TOKEN)
-
-    
 - script: > 
-    npx semantic-release 
+    npx semantic-release
     -r https://github.com/romulo2franca/ocktops.git
     -b change-pipeline-3
+  env: { GITHUB_TOKEN: $(GH_TOKEN) }
   displayName: 'Semantic Release'
